<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woods"
    tools:context=".ApplicationLayer.RegisterActivity">

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="628dp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="22dp"
        android:text="@string/register_below"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/edit_round"
        android:autofillHints=""
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressField"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTxt" />

    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="476dp"
        android:background="@drawable/edit_round"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="15dp"
        android:hint="@string/e_mail_address"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/edit_round"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/termsAndConditionsBox"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/button_round"


        android:drawableStart="@drawable/ic_arrow_forward_black_24dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="80dp"
        android:paddingEnd="90dp"
        android:shadowRadius="5"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioButton
        android:id="@+id/termsAndConditionsBox"
        android:layout_width="201dp"
        android:layout_height="33dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_round"
        android:fontFamily="sans-serif-medium"
        android:text="@string/terms_and_conditions"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>