<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woods"
    tools:context=".ApplicationLayer.LoginActivity">

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="588dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_below"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/emailAddressField"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="520dp"
        android:autofillHints=""
        android:background="@drawable/edit_round"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawablePadding="13dp"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTxt" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="440dp"
        android:background="@drawable/edit_round"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:drawablePadding="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressField" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/button_round"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />
</androidx.constraintlayout.widget.ConstraintLayout>