<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/woods"
    tools:context=".ApplicationLayer.MainActivity">

    <TextView
        android:id="@+id/welcomeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/don_t_have_an_account_register_today"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsTxt" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/button_round"
        android:text="@string/register"
        android:textColor="@android:color/white"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/button_round"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contactUsBtn"
        app:layout_constraintStart_toEndOf="@+id/registerBtn"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

    <TextView
        android:id="@+id/contactUsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-medium"
        android:text="Shopping App"
        android:textColor="#070707"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contactUsBtn"
        android:layout_width="112dp"
        android:layout_height="41dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="344dp"
        android:background="@drawable/button_round"
        android:text="@string/contact_us"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>